# fhir-x-omop

./: .gitignore  README.md  pyproject.toml
fhir_x_omop/lexicons/: __init__.py  lib.py
fhir_x_omop/to_fhir/: __init__.py  careplan.py  claim.py  condition.py  encounter.py  immunization.py  observation.py  patient.py  practitioner.py  procedure.py
fhir_x_omop/to_omop/: __init__.py  condition_occurrence.py  cost.py  drug_exposure.py  observation.py  observation_from_careplan.py  person.py  procedure_occurrence.py  provider.py  visit_occurrence.py
temp/: chidian-0.1.0-cp312-cp312-macosx_11_0_arm64.whl  omop_pydantic-0.1.0-py3-none-any.whl
tests/: README.md
